updated views, using ViewData for footer to hold page map & interpage links.  Also got Engineers/Index page working.

--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -1,10 +1,9 @@
 @{
     ViewData["Title"] = "Create Engineer";
+    ViewData["Footer"] = "Views / Engineers / Create";
 }
 
 <div class="text-center">
     <h1 class="display-4">Create Engineer</h1>
-    
-    <p>Views / Engineers / Create</p>
-    
+
 </div>
