--- a/Factory/Views/Engineers/Edit.cshtml
+++ b/Factory/Views/Engineers/Edit.cshtml
@@ -1,10 +1,9 @@
 @{
     ViewData["Title"] = "Edit Engineer";
+    ViewData["Footer"] = "Views / Engineers / Edit";
 }
 
 <div class="text-center">
     <h1 class="display-4">Edit Delete</h1>
-    
-    <p>Views / Engineers / Edit</p>
     
 </div>
