--- a/Factory/Views/Engineers/Delete.cshtml
+++ b/Factory/Views/Engineers/Delete.cshtml
@@ -1,10 +1,9 @@
 @{
     ViewData["Title"] = "Delete Engineer";
+    ViewData["Footer"] = "Views / Engineers / Delete";
 }
 
 <div class="text-center">
     <h1 class="display-4">Create Delete</h1>
-    
-    <p>Views / Engineers / Delete</p>
-    
+
 </div>
