--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -1,10 +1,9 @@
 @{
     ViewData["Title"] = "Engineer Details";
+    ViewData["Footer"] = "Views / Engineers / Details";
 }
 
 <div class="text-center">
     <h1 class="display-4">Engineer Details</h1>
-    
-    <p>Views / Engineers / Details</p>
     
 </div>
