--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -1,10 +1,36 @@
+@using Factory.Models;
+
 @{
     ViewData["Title"] = "Machine Details";
+    Layout = "_Layout";
 }
+
+@model Factory.Models.Machine
 
 <div class="text-center">
     <h1 class="display-4">Machine Details</h1>
-    
-    <p>Views / Machines / Details</p>
-    
 </div>
+<hr />
+<h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
+
+@* @if(@Model.JoinEntities.Count == 0) *@
+@* { *@
+@*     <p>This item does not belong to any categories</p> *@
+@* } *@
+@* else *@
+@* { *@
+@*     <h4>Categories the item belongs to:</h4> *@
+     <ul>
+        @foreach (var join in Model.JoinEntities)
+        {
+            <li>@join.Engineer.EngineerName</li>
+        }
+    </ul>
+@* } *@
+        
+<p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.MachineId })</p>
+<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.MachineId })</p>
+        
+<p>Views / Machines / Details</p>
+
