--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -1,10 +1,25 @@
 @{
-    ViewData["Title"] = "Machine Index";
+  Layout = "_Layout";  
+	ViewData["Title"] = "Machine Index";
 }
+
+@using Factory.Models;
+@model List<Factory.Models.Machine>;
 
 <div class="text-center">
     <h1 class="display-4">Machine Index</h1>
-    
-    <p>Views / Machines / Index</p>
-    
 </div>
+    
+@if (@Model.Count == 0)
+{
+  <h3>No items have been added yet!</h3>
+} 
+
+@foreach (Machine machine in Model)
+{
+  <li>@Html.ActionLink($"{machine.Description}", "Details", new { id = machine.MachineId }) | @machine.MachineName</li>
+}
+
+<p>@Html.ActionLink("Add new item", "Create")</p>
+
+<p>Views / Machines / Index</p>
