--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2022 - Factory - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        @ViewData["Footer"] 
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
