--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -7,32 +7,34 @@
 
 <div class="text-center">
     <h1 class="display-4">Engineer Index</h1>
-
-        @if (!@Model.Any())
-        {
-          <p>No engineers have been added yet. </p>
-        }
-        else
-        {
-            <table class="table table-bordered table-striped">
-                <thead>
-                <tr>
-                    <th>Employee Id:</th>
-                    <th>Employee Name:</th>
-                    <th>Hire Date:</th>
-                </tr>
-                </thead>
-                <tbody>
-                @foreach (var obj in Model)
-                {
-                    <tr>
-                        <td>@obj.EngineerId</td>
-                        <td>@obj.EngineerName</td>
-                        <td>@obj.CreationDate</td>
-                    </tr>
-                }
-                </tbody>
-            </table>
-        }
-        
 </div>
+
+@if (!@Model.Any())
+{
+  <p>No engineers have been added yet. </p>
+}
+else
+{
+    <table class="table table-bordered table-striped">
+        <thead>
+        <tr>
+            <th>Employee Id:</th>
+            <th>Employee Name:</th>
+            <th>Hire Date:</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var obj in Model)
+        {
+            <tr>
+                <td>@obj.EngineerId</td>
+                <td>@obj.EngineerName</td>
+                <td>@obj.CreationDate</td>
+            </tr>
+        }
+        </tbody>
+    </table>
+}
+<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Create">+ Add Engineer</a>
+<a class="btn btn-secondary" asp-area="" asp-controller="Machines" asp-action="Create">+ Add Machine</a>
+        
