--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -1,27 +1,55 @@
 ﻿@{
-    ViewData["Title"] = "Home";
+	ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+	<h1 class="display-4">Welcome</h1>
 </div>
-    
+
 <ul>
-    <li><strong>Home</strong></li>
-    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home / Index</a></li>
-    <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Home / Privacy</a></li>
-    <li><a asp-area="" asp-controller="Home" asp-action="Test">Home / Test</a></li>
-    <li><strong>Engineers</strong></li>
-    <li><a asp-area="" asp-controller="Engineers" asp-action="Create">Engineers / Create</a></li>
-    <li><a asp-area="" asp-controller="Engineers" asp-action="Delete">Engineers / Delete</a></li>
-    <li><a asp-area="" asp-controller="Engineers" asp-action="Details">Engineers / Details</a></li>
-    <li><a asp-area="" asp-controller="Engineers" asp-action="Edit">Engineers / Edit</a></li>
-    <li><a asp-area="" asp-controller="Engineers" asp-action="Index">Engineers / Index</a></li>
-    <li><strong>Machines</strong></li>
-    <li><a asp-area="" asp-controller="Machines" asp-action="Create">Machines / Create</a></li>
-    <li><a asp-area="" asp-controller="Machines" asp-action="Delete">Machines / Delete</a></li>
-    <li><a asp-area="" asp-controller="Machines" asp-action="Details">Machines /  Details</a></li>
-    <li><a asp-area="" asp-controller="Machines" asp-action="Edit">Machines / Edit</a></li>
-    <li><a asp-area="" asp-controller="Machines" asp-action="Index">Machines / Index </a></li>
-    <li><a asp-area="" asp-controller="Machines" asp-action="Test">Machines / Test </a></li>
+	<li>
+		<strong>Home</strong>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Home" asp-action="Index">Home / Index</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Home" asp-action="Privacy">Home / Privacy</a>
+	</li>
+	<li>
+		<strong>Engineers</strong>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Engineers" asp-action="Create">Engineers / Create</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Engineers" asp-action="Delete">Engineers / Delete</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Engineers" asp-action="Details">Engineers / Details</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Engineers" asp-action="Edit">Engineers / Edit</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Engineers" asp-action="Index">Engineers / Index</a>
+	</li>
+	<li>
+		<strong>Machines</strong>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Machines" asp-action="Create">Machines / Create</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Machines" asp-action="Delete">Machines / Delete</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Machines" asp-action="Details">Machines / Details</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Machines" asp-action="Edit">Machines / Edit</a>
+	</li>
+	<li>
+		<a asp-area="" asp-controller="Machines" asp-action="Index">Machines / Index </a>
+	</li>
 </ul>
