--- a/Factory/Views/Engineers/Delete.cshtml
+++ b/Factory/Views/Engineers/Delete.cshtml
@@ -1,9 +1,15 @@
 @{
-    ViewData["Title"] = "Delete Engineer";
-    ViewData["Footer"] = "Views / Engineers / Delete";
+	ViewData["Title"] = "Delete Engineer";
+	ViewData["Footer"] = "Views / Engineers / Delete";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Create Delete</h1>
+	<h1 class="display-4">Delete Engineer</h1>
 </div>
 
+<p>Are you sure you want to delete this engineer?</p>
+
+@using (Html.BeginForm())
+{
+	<input type="submit" value="Delete Engineer" class="btn btn-primary"/>
+}
