--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -1,10 +1,19 @@
 @{
-    ViewData["Title"] = "Create Machine";
+	ViewData["Title"] = "Create Machine";
+	ViewData["Footer"] = "Views / Machines / Create";
 }
 
+@model Machine
+
 <div class="text-center">
-    <h1 class="display-4">Create Machine</h1>
-    
-    <p>Views / Machines / Create</p>
-    
+	<h1 class="display-4">Create Machine</h1>
 </div>
+
+@using (Html.BeginForm())
+{
+	@Html.LabelFor(model => model.MachineName)
+	@Html.TextBoxFor(model => model.MachineName)
+	@Html.LabelFor(model => model.Description)
+	@Html.TextBoxFor(model => model.Description)
+	<input type="submit" value="Add Machine" class="btn btn-primary"/>
+}
