tweaks to model files.

--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -11,7 +11,9 @@
 
 @if (!Model.Any())
 {
-	<p>No machines have been added yet. </p>
+	<div class="text-center">
+		<h4>No machines found</h4>
+	</div>
 }
 else
 {
