--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -1,9 +1,10 @@
+using Factory.Models;
+
 @{
 	ViewData["Title"] = "Machine Details";
 	ViewData["Footer"] = "Views / Machines / Details";
 }
-
-@model IEnumerable<Machine>
+@model Machine
 
 <div class="text-center">
 	<h1 class="display-4">Machine Details</h1>
@@ -11,36 +12,36 @@
 
 <hr/>
 
-@if (!Model.Any())
-{
-	<p>No machines have been added yet.</p>
-}
-else
-{
-	<table class="table table-bordered table-striped">
-		<thead>
-		<tr>
-			<th>Machine Id:</th>
-			<th>Machine Name:</th>
-			<th>Description:</th>
-			<th>Engineer Assigned:</th>
-			<th>Actions</th>
-		</tr>
-		</thead>
-		<tbody>
-		@foreach (var obj in Model)
-		{
-			<tr>
-				<td>@obj.MachineId</td>
-				<td>@obj.MachineName</td>
-				<td>@obj.Description</td>
-				<td>Engineer</td>
-				<td>
-					<a class="btn btn-primary" asp-area="" asp-controller="Machines" asp-action="Edit" asp-route-machineId="@obj.MachineId">Edit</a>
-					<a class="btn btn-danger" asp-area="" asp-controller="Machines" asp-action="Delete" asp-route-machineId="@obj.MachineId">Delete</a>
-				</td>
-			</tr>
-		}
-		</tbody>
-	</table>
-}
+@* @if (Model.Count() != 0) *@
+@* { *@
+@* 	<p>No machines have been added yet.</p> *@
+@* } *@
+@* else *@
+@* { *@
+<table class="table table-bordered table-striped">
+	<thead>
+	<tr>
+		<th>Machine Id:</th>
+		<th>Machine Name:</th>
+		<th>Description:</th>
+		<th>Engineer Assigned:</th>
+		<th>Actions</th>
+	</tr>
+	</thead>
+	<tbody>
+	@* @foreach (var obj in Model) *@
+	@* { *@
+	<tr>
+		<td>@Model.MachineId</td>
+		<td>@Model.MachineName</td>
+		<td>@Model.Description</td>
+		<td>Engineer</td>
+		<td>
+			<a class="btn btn-primary" asp-area="" asp-controller="Machines" asp-action="Edit" asp-route-machineId="@Model.MachineId">Edit</a>
+			<a class="btn btn-danger" asp-area="" asp-controller="Machines" asp-action="Delete" asp-route-machineId="@Model.MachineId">Delete</a>
+		</td>
+	</tr>
+	@* } *@
+	</tbody>
+</table>
+@* } *@
