fixed machine details page!

--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -9,11 +9,11 @@
 	<h1 class="display-4">Machine Index</h1>
 </div>
 
+<hr/>
+
 @if (!Model.Any())
 {
-	<div class="text-center">
-		<h4>No machines found</h4>
-	</div>
+	<p>No machines have been added yet. </p>
 }
 else
 {
