--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -3,7 +3,8 @@
 	ViewData["Footer"] = "Views / Engineers / Details";
 }
 
-@model IEnumerable<Engineer>
+@* @model IEnumerable<Engineer> *@
+@model Engineer
 
 <div class="text-center">
 	<h1 class="display-4">Engineer Details</h1>
@@ -11,35 +12,24 @@
 
 <hr/>
 
-@if (!Model.Any())
-{
-	<p>No engineers have been added yet. </p>
-}
-else
-{
-	<table class="table table-bordered table-striped">
-		<thead>
-		<tr>
-			<th>Employee Id:</th>
-			<th>Employee Name:</th>
-			<th>Hire Date:</th>
-			<th>Actions</th>
-		</tr>
-		</thead>
-		<tbody>
-		@foreach (var obj in Model)
-		{
-			<tr>
-				<td>@obj.EngineerId</td>
-				<td>@obj.EngineerName</td>
-				<td>@obj.CreationDate</td>
-				<td>
-					<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-engineerId="@obj.EngineerId">Edit</a>
-					<a class="btn btn-danger" asp-area="" asp-controller="Engineers" asp-action="Delete" asp-route-engineerId="@obj.EngineerId">Delete</a>
-				</td>
-			</tr>
-		}
-		</tbody>
-	</table>
-}
-<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Create">+ Add Engineer</a>
+<table class="table table-bordered table-striped">
+	<thead>
+	<tr>
+		<th>Employee Id:</th>
+		<th>Employee Name:</th>
+		<th>Hire Date:</th>
+		<th>Actions</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>@Model.EngineerId</td>
+		<td>@Model.EngineerName</td>
+		<td>@Model.CreationDate</td>
+		<td>
+			<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-engineerId="@Model.EngineerId">Edit</a>
+			<a class="btn btn-danger" asp-area="" asp-controller="Engineers" asp-action="Delete" asp-route-engineerId="@Model.EngineerId">Delete</a>
+		</td>
+	</tr>
+	</tbody>
+</table>
