fixed issue with machines delete not working.

--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -37,7 +37,7 @@ else
 				<td>engineer placeholder</td>
 				<td>
 					<a class="btn btn-primary" asp-area="" asp-controller="Machines" asp-action="Edit" asp-route-machineId="@obj.MachineId">Edit</a>
-					<a class="btn btn-danger" asp-area="" asp-controller="Engineers" asp-action="Delete" asp-route-machineId="@obj.MachineId">Delete</a>
+					<a class="btn btn-danger" asp-area="" asp-controller="Machines" asp-action="Delete" asp-route-machineId="@obj.MachineId">Delete</a>
 				</td>
 			</tr>
 		}
