--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -15,5 +15,7 @@
 	@Html.TextBoxFor(model => model.MachineName)
 	@Html.LabelFor(model => model.Description)
 	@Html.TextBoxFor(model => model.Description)
+	@Html.Label("Select Engineer")
+	@Html.DropDownList("EngineerId")
 	<input type="submit" value="Add Machine" class="btn btn-primary"/>
 }
