--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -31,7 +31,7 @@ else
 		{
 			<tr>
 				<td>@obj.EngineerId</td>
-				<td>@obj.EngineerName</td>
+				<td>@Html.ActionLink($"{@obj.EngineerName}", "Details", new {id = @obj.EngineerId})</td>
 				<td>@obj.CreationDate</td>
 				<td>
 					<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-engineerId="@obj.EngineerId">Edit</a>
