updating index and details routes in controller.

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -2,7 +2,8 @@
 	ViewData["Title"] = "Machine Details";
 	ViewData["Footer"] = "Views / Machines / Details";
 }
-@model Machine
+
+@model ToDoList.Models.Item
 
 <div class="text-center">
 	<h1 class="display-4">Machine Details</h1>
