--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -4,6 +4,7 @@
 }
 
 @model IEnumerable<Machine>
+@* @model Factory.Models.Machine *@
 
 <div class="text-center">
 	<h1 class="display-4">Machine Index</h1>
@@ -11,7 +12,7 @@
 
 <hr/>
 
-@if (!Model.Any())
+@if (Model.Count() == 0)
 {
 	<p>No machines have been added yet. </p>
 }
@@ -32,9 +33,9 @@ else
 		{
 			<tr>
 				<td>@obj.MachineId</td>
-				<td>@Html.ActionLink($"{@obj.MachineName}", "Details", new {id = @obj.MachineId})</td>
+				<td>@obj.MachineName</td>
 				<td>@obj.Description</td>
-				<td>engineer placeholder</td>
+				<td>@Html.ActionLink($"Details", "Details", new {id = @obj.MachineId})</td>
 				<td>
 					<a class="btn btn-primary" asp-area="" asp-controller="Machines" asp-action="Edit" asp-route-machineId="@obj.MachineId">Edit</a>
 					<a class="btn btn-danger" asp-area="" asp-controller="Machines" asp-action="Delete" asp-route-machineId="@obj.MachineId">Delete</a>
