--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -15,6 +15,8 @@
 {
 	@Html.LabelFor(model => model.EngineerName)
 	@Html.TextBoxFor(model => model.EngineerName)
-
+	
+	@*@Html.Label("Select Machine")
+	@Html.DropDownList("MachineId")*@
 	<input type="submit" value="Add Engineer" class="btn btn-primary"/>
 }
