--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -3,7 +3,7 @@
 	ViewData["Footer"] = "Views / Engineers / Index";
 }
 
-@model IEnumerable<Engineer>
+@model System.Collections.Generic.List<Factory.Models.Engineer>
 
 <div class="text-center">
 	<h1 class="display-4">Engineer Index</h1>
@@ -23,19 +23,26 @@ else
 			<th>Employee Id:</th>
 			<th>Employee Name:</th>
 			<th>Hire Date:</th>
+			<th>Machine(s) Assigned:</th>
 			<th>Actions</th>
 		</tr>
 		</thead>
 		<tbody>
-		@foreach (var obj in Model)
+		@foreach (Engineer engineer in Model)
 		{
 			<tr>
-				<td>@obj.EngineerId</td>
-				<td>@Html.ActionLink($"{@obj.EngineerName}", "Details", new {id = @obj.EngineerId})</td>
-				<td>@obj.CreationDate</td>
+				<td>@engineer.EngineerId</td>
+				<td>@Html.ActionLink($"{@engineer.EngineerName}", "Details", new {id = @engineer.EngineerId})</td>
+				<td>@engineer.CreationDate</td>
 				<td>
-					<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-engineerId="@obj.EngineerId">Edit</a>
-					<a class="btn btn-danger" asp-area="" asp-controller="Engineers" asp-action="Delete" asp-route-engineerId="@obj.EngineerId">Delete</a>
+					@foreach(var join in engineer.JoinEntities)
+					{
+					  <p>@join.Machine.MachineName</p>
+					}
+				</td>
+				<td>
+					<a class="btn btn-primary" asp-area="" asp-controller="Engineers" asp-action="Edit" asp-route-engineerId="@engineer.EngineerId">Edit</a>
+					<a class="btn btn-danger" asp-area="" asp-controller="Engineers" asp-action="Delete" asp-route-engineerId="@engineer.EngineerId">Delete</a>
 				</td>
 			</tr>
 		}
